--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,17 +4,27 @@
     padding: 0;
 }
 
-body {
-	background: url('../../33c54aa5-a1d7-46b7-b552-80aa4e5d37ca-removebg-preview.png') no-repeat, linear-gradient(90deg,white,lightgrey);
-	background-attachment: fixed;
-	background-position: left;
-	font-family: 'nobile';
-}
 
 html {
 	scroll-behavior: smooth;
 }
 
+.preloader {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background-color: #fff;
+}
+  .preloader .loading {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%,-50%);
+	font: 14px arial;
+}
 
 nav.navbar > .container-fluid > a.navbar-brand{
 	color: black;
@@ -101,20 +111,40 @@ div.content{
 
 /* responsive dekstop / laptop */
 @media only screen and (min-width: 992px) {
+	body {
+		background: rgb(255,255,255);
+		background: url('../../33c54aa5-a1d7-46b7-b552-80aa4e5d37ca-removebg-preview.png') no-repeat, linear-gradient(105deg, rgba(255,255,255,1) 15%, rgba(255,255,255,1) 27%, rgba(211,211,211,1) 100%);
+		background-attachment: fixed;
+		background-position: left;
+		font-family: 'nobile';
+	}
 	.text-medsos{
 		margin-left: 450px;
 		margin-bottom: 50px;
+	}
+	.header {
+		display: none;
 	}
 }
 
 /* responsive mobile */
 @media only screen and (max-width: 600px) {
-	body{
-		background: url('../../33c54aa5-a1d7-46b7-b552-80aa4e5d37ca-removebg-preview.png') no-repeat, linear-gradient(-90deg,white,lightgrey);
-		background-attachment: fixed;
-		background-position: left;
-		background-position-x: -230px;
-		background-position-y: 120px;
+	body{	
+	background: rgb(255,255,255);
+	background: linear-gradient(105deg, rgba(255,255,255,1) 15%, rgba(255,255,255,1) 27%, rgba(211,211,211,1) 100%);
+	background-attachment: fixed;
+	font-family: 'nobile';
+	}
+	.header{
+		height:30%;
+		left:-3%;
+		position:absolute;
+		background-image: linear-gradient(#8459f9, #4c3196);
+		border-bottom-left-radius: 50% 20%;
+		border-bottom-right-radius: 50% 20%;
+	}
+	.header > img{
+		width: 45%;
 	}
 	nav.navbar{
 		display: none;
