--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,10 @@ div.content{
 	background-color: lightgrey;
 }
 
+.icon-medsos > a {
+	color: black;
+	margin: 0px 10px 0px 0px;
+}
 /* responsive dekstop / laptop */
 @media only screen and (min-width: 992px) {
 	body {
